--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Loremis</title>
+	<title>Rft#4567</title>
 	<link rel="stylesheet" href="loremis.css">
 </head>
 <body>
@@ -13,14 +13,14 @@
 				<a href="#"></a>
 			</div>
 			<div class="navbar_center FLEX_CENTERED_WRAP">
-				<p>read more</p>
+				<p>more ipsum less lorem</p>
 			</div>
 			<div class="navbar_right FLEX_CENTERED_WRAP">
 				<button class="dropdown_button" id="dropdown_button"></button>
 				<ul class="dropdown_list" id="dropdown_list">
-					<li><a href="#1">lel man there`s</a></li>
+					<li><a href="#1">protonmail?</a></li>
 					<li><a href="#2">no burger for u</a></li>
-					<li><a href="#3">ahahahahaffahah</a></li>
+					<li><a href="loremis03.html">ahahahahaffahah</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -57,7 +57,7 @@
 				Vel ab nam quod commodi, repellat iusto saepe ea ratione. Tempore sunt praesentium ex nesciunt totam aperiam in ratione facere, esse nam quae expedita officiis eius fuga molestias. Inventore, mollitia?
 				Quaerat placeat quod asperiores sit eius impedit accusantium, hic fuga exercitationem quasi provident nostrum soluta omnis dicta accusamus, laborum officiis voluptates sint adipisci quibusdam ut. Corporis magni doloribus expedita veniam!
 				Tempore labore ducimus omnis maiores impedit. Asperiores minus, molestias quo facilis minima, quas velit eius, dolor aspernatur laborum, similique unde accusamus! Architecto obcaecati ab rerum voluptatem nobis. In, qui ratione.</a>
-				<a href="138.201.198.181">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio maxime harum officiis inventore quis, molestiae magnam, necessitatibus, one of remote work servers with no protection from outside facilis amet vel recusandae fuga saepe sed mollitia quia, dignissimos at est suscipit. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Rem hic cum ab deserunt inventore ut iusto eveniet eos esse vel veritatis qui aspernatur facilis odit amet dolorum maiores, adipisci quisquam.
+				<a href="138.201.198.181">this one of the normal RDP`s for office Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio maxime harum officiis inventore quis, molestiae magnam, necessitatibus, one of remote work servers with no protection from outside facilis amet vel recusandae fuga saepe sed mollitia quia, dignissimos at est suscipit. Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Rem hic cum ab deserunt inventore ut iusto eveniet eos esse vel veritatis qui aspernatur facilis odit amet dolorum maiores, adipisci quisquam.
 				Reiciendis animi architecto eaque minima dolorem laboriosam molestias, mollitia vero ratione excepturi consequatur quis est cum sunt pariatur dignissimos molestiae consequuntur quaerat reprehenderit? Totam voluptate ducimus quasi necessitatibus veritatis, saepe.
 				Libero, iusto nisi eum recusandae ad sit. Fuga assumenda dolorem unde accusantium quisquam hic sint velit quia eligendi laboriosam corporis, recusandae perferendis enim dolore magni, in impedit exercitationem harum iusto.
 				Ad eaque, illo eius! Dolores dignissimos necessitatibus saepe voluptatem beatae libero quam corrupti voluptatibus et fuga, illo impedit incidunt sunt totam non voluptate nulla, ex a error quisquam qui alias.
