--- a/loremis02.html
+++ b/loremis02.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<main class="smile">
-		<!-- <div> -->
+		<p>find me)<p/>
 			<a href="https://mega.nz/folder/sugyyCwA#yTUHxIa9vE7653NRxOigKw" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
 			<a href="" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
 			<a href="" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
@@ -29,7 +29,6 @@
 			<a href="" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
 			<a href="" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
 			<a href="" class="make_me_smile_wrap"><div class="make_me_smile"></div></a>
-		<!-- </div> -->
 	</main>
 	<script src="loremis02.js"></script>
 </body>
