--- a/loremis03.html
+++ b/loremis03.html
@@ -17,7 +17,9 @@ Earline Roberts (or Earlene Roberts, d. January 1966), Oswald's landlady (owner 
 Tom Howard (d. March 1965), one of Ruby's lawyers (the lead lawyer, according to Jones Jr.). Howard also went to Ruby's apartment with Koethe and Hunter the night after Ruby shot Oswald. Died of a heart attack, age 48, after behaving strangely for a few days and not recognizing his friends (no autopsy performed).
 Lee Bowers (d. August 1966), a witness who was in a railway interlocking tower that overlooked Dealey Plaza at the time of the assassination. Died after his car crashed into a bridge abutment.
 Hank Killam (d. March 1964), whose wife was a "cigarette girl" (or a dancer) at Ruby's club. Killam later moved to Florida, and died there; he received a phone call at 4 am, after which he went to a building in downtown Pensacola and "jumped or fell" out of a first floor window, and bled to death from cuts to his throat, amid pieces of broken glass.[81] 
-<span style="transform: rotate(240deg); display: inline-block; position: absolute; bottom: 200px;">(1, 'dkdkdk@mail.ru', 'dkfkfj', 1, 1650528426, ''),
+<span style="transform: rotate(240deg); display: inline-block; position: absolute; bottom: 200px;">
+	<p>KILLNET db leak</p>
+(1, 'dkdkdk@mail.ru', 'dkfkfj', 1, 1650528426, ''),
 (2, 'carle.ea.wjo.k9.1@gmail.com', 'cl7gblCK', 3, 1650528426, '65850ae1d6fc87177e811235-a4c8929a'),
 (3, 'alga@mail.ru', '135531135531', 1, 1679062399, 'cddb17e852768022179e3d34-38f779d9'),
 (4, '123', '123', 0, NULL, '0'),
